fix flex align center/start

--- a/css/base.css
+++ b/css/base.css
@@ -98,7 +98,6 @@ a img {
  * -------------------------------------- */
 .column {
 	flex: 1;
-	align-self: flex-start;
 	padding: 0 20px;
 }
 
